#11 extract content by id

--- a/cms-server/hosts/demo/templates/blog-entry.html
+++ b/cms-server/hosts/demo/templates/blog-entry.html
@@ -9,7 +9,7 @@
 
 	<nav th:replace="libs/fragments.html :: navigation"></nav>
 
-	<div class="container">
+	<div id="content" class="container">
 
 		<div class="row">
 			<h2 th:utext="${title}"></h2>
