--- a/cms-server/hosts/demo/templates/start.html
+++ b/cms-server/hosts/demo/templates/start.html
@@ -7,9 +7,9 @@
 	<body>
 		
 		<nav th:replace="libs/fragments.html :: navigation"></nav>
-
-		<div class="container" th:utext="${content}"></div>
-
+		<div id="content">
+			<div class="container" th:utext="${content}"></div>
+		</div>
 		<th:block th:replace="libs/fragments.html :: footer"></th:block>
 
 	</body>
