#12 template loader for themes, priority in site templates

--- a/cms-server/themes/default/templates/search.html
+++ b/cms-server/themes/default/templates/search.html
@@ -5,8 +5,8 @@
 	<meta name="robots" content="noindex, nofollow" />
 	<th:block th:replace="libs/fragments.html :: header">
 	</th:block>
-	<script src="/assets/search-1.js" defer></script>
-	<link rel="stylesheet" href="/assets/search-1.css" defer />
+	<script src="/themes/default/assets/search-1.js" defer></script>
+	<link rel="stylesheet" href="/themes/default/assets/search-1.css" defer />
 </head>
 
 <body>
