--- a/cms-server/themes/default/templates/libs/fragments.html
+++ b/cms-server/themes/default/templates/libs/fragments.html
@@ -7,10 +7,10 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="/assets/bootstrap-5.3.2/css/bootstrap.min.css" defer />
-	<link href="/assets/bootstrap-icons-1.11.1/bootstrap-icons.min.css" rel="stylesheet" />
-	<script src="/assets/prism-1.29.0/prism.js" defer></script>
-	<link rel="stylesheet" href="/assets/prism-1.29.0/prism.css" defer />
+	<link rel="stylesheet" href="/themes/default/assets/bootstrap-5.3.2/css/bootstrap.min.css" defer />
+	<link href="/themes/default/assets/bootstrap-icons-1.11.1/bootstrap-icons.min.css" rel="stylesheet" />
+	<script src="/themes/default/assets/prism-1.29.0/prism.js" defer></script>
+	<link rel="stylesheet" href="/themes/default/assets/prism-1.29.0/prism.css" defer />
 </th:block>
 
 <body>
@@ -64,7 +64,7 @@
 	</div>
 
 	<th:block th:fragment="footer_scripts">
-		<script src="/assets/bootstrap-5.3.2/js/bootstrap.bundle.min.js"></script>
+		<script src="/themes/default/assets/bootstrap-5.3.2/js/bootstrap.bundle.min.js"></script>
 	</th:block>
 
 </body>
