--- a/cms-server/hosts/demo/templates/taxonomy-single.html
+++ b/cms-server/hosts/demo/templates/taxonomy-single.html
@@ -12,7 +12,7 @@
 
 	<div class="container">
 		<h2 th:text="${meta.title}"></h2>
-		<ul th:each="node: ${nodes}">
+		<ul th:each="node: ${page.items}">
 				<ul>
 					<a th:href="${node.path()}">
 						<span th:text="${node.name()}"></span>
