#125 configuration layer added #4 taxonomy config in separate file

--- a/cms-server/themes/default/templates/blog-entry.html
+++ b/cms-server/themes/default/templates/blog-entry.html
@@ -22,7 +22,7 @@
 		>
 			TAGS:
 			<div th:each="tag: ${meta.taxonomy.tags}">
-				<a th:href="${taxonomyFN.url('tags', tag)}" th:text="${tag}" ></a>
+				<a th:href="${taxonomyFN.url('tags', tag)}" th:text="${taxonomyFN.getTitle('tags', tag)}" ></a>
 			</div>
 			
 		</div>
