--- a/cms-sandbox/templates/pom.xml
+++ b/cms-sandbox/templates/pom.xml
@@ -13,4 +13,13 @@
         <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+            <version>5.11.3</version>
+        </dependency>
+    </dependencies>
 </project>
