--- a/cms-sandbox/templates/pom.xml
+++ b/cms-sandbox/templates/pom.xml
@@ -4,9 +4,13 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.condation.cms</groupId>
+	<parent>
+		<groupId>com.condation.cms</groupId>
+		<artifactId>cms-sandbox</artifactId>
+		<version>7.2.0</version>
+	</parent>
+
 	<artifactId>templates</artifactId>
-	<version>1.0-SNAPSHOT</version>
 
 	<properties>
 		<maven.compiler.source>21</maven.compiler.source>
@@ -15,6 +19,17 @@
 
 
 	<dependencies>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-jexl3</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
