--- a/cms-sandbox/templates/pom.xml
+++ b/cms-sandbox/templates/pom.xml
@@ -21,6 +21,16 @@
 	<dependencies>
 		
 		<dependency>
+			<groupId>com.condation.cms</groupId>
+			<artifactId>cms-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.condation.cms</groupId>
+			<artifactId>cms-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-jexl3</artifactId>
 		</dependency>
