--- a/cms-sandbox/templates/src/test/resources/com/condation/cms/templates/testdata/variable_raw_filter.html
+++ b/cms-sandbox/templates/src/test/resources/com/condation/cms/templates/testdata/variable_raw_filter.html
@@ -19,5 +19,5 @@
   <http://www.gnu.org/licenses/gpl-3.0.html>.
   #L%
   -->
-{% set content = "<p>This is a paragraph</p>" %}
+{% assign content = "<p>This is a paragraph</p>" %}
 {{ content | raw }}
