* add auth for manager * add example section * make fullscreen for modal optional

--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -12,6 +12,14 @@
 			{{ node.content | raw}}
 		</div>
 	</div>
+	<div class="container">
+		{% if sections.containsKey('asection') %}
+			{% for section in sections.get('asection') %}
+				{{ section.content() | raw }}
+			{% endfor %}
+		{% endif %}
+		
+	</div>
 
 </body>
 
