--- a/modules/ui-module/src/main/resources/manager/css/manager.css
+++ b/modules/ui-module/src/main/resources/manager/css/manager.css
@@ -19,17 +19,40 @@
  * <http://www.gnu.org/licenses/gpl-3.0.html>.
  * #L%
  */
-import {executeCommand} from '/manager/js/system-commands.js'
-import {getPreviewUrl} from '/manager/js/ui-helpers.js'
-		// hook.js
-export async function runAction(params) {
-	
-		var contentNode = await executeCommand({
-		command: "getContentNode",
-		parameters: {
-			url: getPreviewUrl()
-		}
-	})
-	
-	console.log(contentNode)
+/* ============ desktop view ============ */
+@media all and (min-width: 992px) {
+
+	.dropdown-menu li{
+		position: relative;
+	}
+	.dropdown-menu .submenu{
+		display: none;
+		position: absolute;
+		left:100%;
+		top:-7px;
+	}
+	.dropdown-menu .submenu-left{
+		right:100%;
+		left:auto;
+	}
+
+	.dropdown-menu > li:hover{
+		background-color: #f1f1f1
+	}
+	.dropdown-menu > li:hover > .submenu{
+		display: block;
+	}
 }
+/* ============ desktop view .end// ============ */
+
+/* ============ small devices ============ */
+@media (max-width: 991px) {
+
+	.dropdown-menu .dropdown-menu{
+		margin-left:0.7rem;
+		margin-right:0.7rem;
+		margin-bottom: .5rem;
+	}
+
+}
+/* ============ small devices .end// ============ */
