--- a/test-server/themes/demo/templates/libs/fragments.html
+++ b/test-server/themes/demo/templates/libs/fragments.html
@@ -11,3 +11,6 @@
   href="{{ links.createUrl('/theme/assets/style.css') }}"
   defer
 />
+
+<script  src="/manager/js/manager-inject.js" type="module"></script>
+ <link rel="stylesheet" href="/manager/css/manager-inject.css" />
