--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html SYSTEM>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-	{% include "libs/fragments.html" %}
-</head>
+	<head>
+		{% include "libs/fragments.html" %}
+	</head>
 
-<body class="centered">
+	<body class="centered">
 
-	<div id="content">
-		<div class="container">
-			{{ node.content | raw}}
+		<div id="content">
+			<div class="container cms-ui-editable" data-cms-editor="text" data-cms-element="content">
+				<div class="toolbar">
+					<button data-cms-action="edit">Edit</button>
+				</div>
+				{{ node.content | raw}}
+			</div>
 		</div>
-	</div>
-	<div class="container">
-		{% if sections.containsKey('asection') %}
-			{% for section in sections.get('asection') %}
-				{{ section.content() | raw }}
-			{% endfor %}
-		{% endif %}
-		
-	</div>
+		<div class="container">
+			{% if sections.containsKey('asection') %}
+				{% for section in sections.get('asection') %}
+					{{ section.content() | raw }}
+				{% endfor %}
+			{% endif %}
 
-</body>
+		</div>
+
+	</body>
 
 
 </html>
