editor for content of sections

--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -8,7 +8,7 @@
 	<body class="centered">
 
 		<div id="content">
-			<div class="container cms-ui-editable" data-cms-editor="text" data-cms-element="content">
+			<div class="container cms-ui-editable" data-cms-editor="code" data-cms-element="content">
 				<div class="toolbar">
 					<button data-cms-action="edit">Edit</button>
 				</div>
