--- a/test-server/themes/demo/templates/section.html
+++ b/test-server/themes/demo/templates/section.html
@@ -1,4 +1,4 @@
-<div class="container cms-ui-editable" data-cms-editor="text" data-cms-element="content" data-cms-content-uri="{{node.uri}}">
+<div class="container cms-ui-editable" data-cms-editor="code" data-cms-element="content" data-cms-content-uri="{{node.uri}}">
 	<div class="toolbar">
 		<button data-cms-action="edit">Edit</button>
 	</div>
