fix edit buttons, make selektion border for editable elements

--- a/modules/ui-module/src/main/resources/manager/css/manager-inject.css
+++ b/modules/ui-module/src/main/resources/manager/css/manager-inject.css
@@ -24,6 +24,11 @@
 	position: relative;
 }
 
+.cms-ui-editable:hover {
+	outline: 3px solid orange;
+	outline-offset: 2px; /* Abstand zum Element */
+}
+
 .toolbar {
 	position: absolute;
 	top: 0;
