--- a/test-server/themes/demo/templates/section.html
+++ b/test-server/themes/demo/templates/section.html
@@ -1,7 +1,7 @@
 <div class="container cms-ui-editable" data-cms-editor="code" data-cms-element="content" data-cms-content-uri="{{node.uri}}">
-	<div class="toolbar">
+	<!--div class="cms-ui-toolbar">
 		<button data-cms-action="edit">Edit</button>
-	</div>
+	</div-->
 	{{ node.content | raw}}
 </div>
 
