--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -9,9 +9,9 @@
 
 		<div id="content">
 			<div class="container cms-ui-editable" data-cms-editor="code" data-cms-element="content">
-				<div class="toolbar">
+				<!--div class="cms-ui-toolbar">
 					<button data-cms-action="edit">Edit</button>
-				</div>
+				</div-->
 				{{ node.content | raw}}
 			</div>
 		</div>
