--- a/test-server/themes/demo/templates/section.html
+++ b/test-server/themes/demo/templates/section.html
@@ -1,15 +1,12 @@
-<div class="container cms-ui-editable" data-cms-editor="code" data-cms-element="content" data-cms-content-uri="{{node.uri}}">
-	<!--div class="cms-ui-toolbar">
-		<button data-cms-action="edit">Edit</button>
-	</div-->
+<div class="container" {{ ui.editContent("code", node.uri) }}">
 	{{ node.content | raw}}
 </div>
 
 <div>
-	<div class="container cms-ui-editable" data-cms-editor="text" data-cms-element="meta" data-cms-meta-element="description" data-cms-content-uri="{{node.uri}}">
+	<div class="container" {{ ui.editMeta("text", "description") }}>
 		{{ node.meta.get('description') | raw}}
 	</div>
-	<div class="container cms-ui-editable" style="min-height: 10px;" data-cms-editor="text" data-cms-element="meta" data-cms-meta-element="parent.text" data-cms-content-uri="{{node.uri}}">
+	<div class="container" {{ ui.editMeta("text", "parent.text") }}>
 		{{ node.meta.get('parent.text') | raw}}
 	</div>
 </div>
