--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -29,7 +29,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="container" {{ ui.editSections('asection')}}>
+		<div class="container" 
+			 {{ ui.editSections('asection')}}
+			 {{ ui.addSection(['section.html'])}}
+			 >
 			{% if sections.containsKey('asection') %}
 			{% for section in sections.get('asection') %}
 			{{ section.content() | raw }}
