--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -3,6 +3,21 @@
 
 	<head>
 		{% include "libs/fragments.html" %}
+		
+		<script type="text/javascript">
+			window.cmsUITemplateInfo = {
+				pageTemplates : [
+					{
+						name: "StartPage",
+						template: "start.html"
+					},
+					{
+						name: "Imprint",
+						template: "imprint.html"
+					}
+				]
+			}
+		</script>
 	</head>
 
 	<body class="centered">
