refactoring forms, add markdown form field

--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -23,7 +23,7 @@
 	<body class="centered">
 
 		<div id="content">
-			<div class="container" {{ ui.editContent("code") }}>
+			<div class="container" {{ ui.editContent("markdown") }}>
 				{{ node.content | raw}}
 			</div>
 			<div>
