add state button

--- a/modules/ui-module/src/main/resources/manager/css/manager.css
+++ b/modules/ui-module/src/main/resources/manager/css/manager.css
@@ -39,3 +39,7 @@ tr[data-cms-file-directory] {
 #drop-zone.dragover {
   background-color: #f0f8ff;
 }
+
+.dropdown-nocaret::after{
+  display: none; 
+}
