--- a/test-server/themes/demo/assets/style.css
+++ b/test-server/themes/demo/assets/style.css
@@ -1,3 +1,12 @@
+body {
+  background-color: #fff;
+  color: #000;
+}
+
+:root {
+    color-scheme: light;
+  }
+
 .centered {
     text-align: center;
 }
