update layout of demo, rename action buttons of injected editor

--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -2,6 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 	<head>
+		
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		
 		{% include "libs/fragments.html" %}
 		
 		<script type="text/javascript">
@@ -95,7 +99,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container" 
+		<div class="container sections" 
 			 {{ ui.editSections('asection')}}
 			 {{ ui.addSection()}}
 			 >
