--- a/test-server/themes/demo/templates/section.html
+++ b/test-server/themes/demo/templates/section.html
@@ -1,13 +1,13 @@
-<div>
-	<div class="container" {{ ui.editContent("code", node.uri) }}">
+<div class="section">
+	<div class="container" {{ ui.editContent("markdown", node.uri) }}">
 		{{ node.content | default('your content here') | raw}}
 	</div>
 
-	<div>
-		<div class="container" {{ ui.editMeta("text", "description", node.uri) }}>
+	<div {{ ui.editForm(node.uri) }} >
+		<div class="container" {{ ui.editFormElement("text", "description", node.uri) }}>
 			{{ node.meta.getOrDefault('description', 'description here') | raw}}
 		</div>
-		<div class="container" {{ ui.editMeta("text", "parent.text", node.uri) }}>
+		<div class="container" {{ ui.editFormElement("text", "parent.text", node.uri) }}>
 			{{ node.meta.getOrDefault('parent.text', 'Parent.Text here') | raw}}
 		</div>
 	</div>
