mae manager working if site runs under context path

--- a/test-server/themes/demo/templates/libs/fragments.html
+++ b/test-server/themes/demo/templates/libs/fragments.html
@@ -12,5 +12,5 @@
   defer
 />
 
-<script  src="/manager/js/manager-inject.js" type="module"></script>
- <link rel="stylesheet" href="/manager/css/manager-inject.css" />
+<script  src="{{ links.createUrl('/manager/js/manager-inject.js') }}" type="module"></script>
+ <link rel="stylesheet" href="{{ links.createUrl('/manager/css/manager-inject.css') }}" />
