--- a/test-server/themes/demo/templates/start.html
+++ b/test-server/themes/demo/templates/start.html
@@ -35,6 +35,11 @@
 						title: 'Custom attributes',
 					},
 					{
+						type: "media",
+						name: "media_url",
+						title: "Media"
+					},
+					{
 						type: 'color',
 						name: 'background_color',
 						title: 'Background Color'
