add buttons to toolbar

--- a/modules/ui-module/src/main/resources/manager/css/manager.css
+++ b/modules/ui-module/src/main/resources/manager/css/manager.css
@@ -134,3 +134,7 @@ tr[data-cms-file-directory] {
 	border: 2px dashed #007bff;
 	background-color: rgba(0,123,255,0.1);
 }
+
+.cms-toolbar-button:hover {
+  cursor: pointer;
+}
