check preview mode

--- a/test-server/themes/demo/templates/libs/fragments.html
+++ b/test-server/themes/demo/templates/libs/fragments.html
@@ -12,5 +12,7 @@
   defer
 />
 
-<script  src="{{ links.createUrl('/manager/js/manager-inject.js') }}" type="module"></script>
- <link rel="stylesheet" href="{{ links.createUrl('/manager/css/manager-inject.css') }}" />
+{% if PREVIEW_MODE %}
+  <script  src="{{ links.createUrl('/manager/js/manager-inject.js') }}" type="module"></script>
+  <link rel="stylesheet" href="{{ links.createUrl('/manager/css/manager-inject.css') }}" />
+{% endif %}
